--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -29,7 +29,7 @@
                         <h2 class="section-heading">BİRLİKTE ÇALIŞTIĞIMIZ ÜNİVERSİTE EKİPLERİ</h2>
                     </div>
                 </div>
-                <center> Yorum satırlarını birlikte kaldıralım ^_^<a target="_blank" href="http://github.com/ktusec/ktusec.github.io/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
+                <center> Yorum satırlarını birlikte kaldıralım ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
                 <!--
 
                 <div class="col-md-4 col-sm-6">
