--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -92,7 +92,43 @@
                         <img src="../css/2017_style/img/logos/ktucec.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                fucypm iytecypm hkucypm nkucypm tobbcypm ve unuttugumuz bır cok unıversıte ekıbı
+                
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/fu.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/nku.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/iyte.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/hku.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/tobb.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/kto.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/ktucec.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                     !!!!!! VE UNUTTUĞUMUZ BİR ÇOK ÜNİVERSİTE EKİBİ !!!!!
            -->
             </div>
         </div>
