--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -84,6 +84,11 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/eucyber.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/ktuyazilim.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
