--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -29,6 +29,11 @@
                         <h2 class="section-heading">BİRLİKTE ÇALIŞTIĞIMIZ ÜNİVERSİTE EKİPLERİ</h2>
                     </div>
                 </div>
+                                <div class="col-md-4 col-sm-6">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/cusiber.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div><br>
                 <center> Yorum satırlarını birlikte kaldıralım ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
                 <br><br><!--
 
@@ -57,11 +62,7 @@
                        <img src="../css/2017_style/img/logos/aucc.png" class="img-responsive img-centered" alt="">
                    </a>
                </div>
-                <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
-                        <img src="../css/2017_style/img/logos/cusiber.png" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
+
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/sducyberlab.png" class="img-responsive img-centered" alt="">
