--- a/_includes/2017_data/contact.html
+++ b/_includes/2017_data/contact.html
@@ -3,8 +3,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">İLETİŞİM</h2>
-                    <h3 class="section-subheading text-muted">İletişim kanallarımızdan gelen sorulara elimizden geldiğince erken dönmeye çalışıyoruz.
-                         Daha hızlı yanıt almak isterseniz <a href="http://www.facebook.com/ktu.sec">Facebook adresimizden </a>ulaşabilirsiniz.</h3>
+                    <h3 class="section-subheading text-muted"> İletişim için Mail adresimizden veya
+                       <a href="http://www.facebook.com/ktu.sec">Facebook üzerinden </a> ulaşabilirsiniz.</h3>
                 </div>
             </div>
             <div class="row">
