--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -9,27 +9,27 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                    <a target="_blank" href="http://canyoupwn.me" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/cypm.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                    <a target="_blank" href="http://octosec.net" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/octo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                    <a target="_blank" href="http://cyberstruggle.org" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/cystrgl.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <br><br>
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">B›RL›KTE «ALIﬁTI–IMIZ ‹N›VERS›TE EK›PLER›</h2>
+                        <h2 class="section-heading">B√ùRL√ùKTE √áALI√ûTI√êIMIZ √úN√ùVERS√ùTE EK√ùPLER√ù</h2>
                     </div>
                 </div>
-                <center> Yorum sat˝rlar˝n˝ birlikte kald˝ral˝m ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
+                <center> Yorum sat√Ωrlar√Ωn√Ω birlikte kald√Ωral√Ωm ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
                 <br>
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
@@ -133,7 +133,7 @@
                         <img src="../css/2017_style/img/logos/ktucec.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                     !!!!!! VE UNUTTU–UMUZ B›R «OK ‹N›VERS›TE EK›B› !!!!!
+                     !!!!!! VE UNUTTU√êUMUZ B√ùR √áOK √úN√ùVERS√ùTE EK√ùB√ù !!!!!
            -->
             </div>
         </div>
