--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -26,10 +26,10 @@
                 <br><br>
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">BÝRLÝKTE ÇALIÞTIÐIMIZ ÜNÝVERSÝTE EKÝPLERÝ</h2>
+                        <h2 class="section-heading">BİRLİKTE ÇALIŞTIĞIMIZ ÜNİVERSİTE EKİPLERİ</h2>
                     </div>
                 </div>
-                <center> Yorum satýrlarýný birlikte kaldýralým ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
+                <center> Yorum satırlarını birlikte kaldıralım. ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
                 <br>
                 <div class="col-md-4 col-sm-6">
                     <a href="#" class="portfolio-link" data-toggle="modal">
@@ -133,7 +133,7 @@
                         <img src="../css/2017_style/img/logos/ktucec.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                     !!!!!! VE UNUTTUÐUMUZ BÝR ÇOK ÜNÝVERSÝTE EKÝBÝ !!!!!
+                     !!!!!! VE UNUTTUĞUMUZ BİR ÇOK ÜNİVERSİTE EKİBİ !!!!!
            -->
             </div>
         </div>
