--- a/_includes/2017_data/footer.html
+++ b/_includes/2017_data/footer.html
@@ -18,7 +18,7 @@ footer {
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © 2017 KtuSec | Powered by Jekyll</span>
+                    <span class="copyright"> © 2017 KtuSec | Powered by Jekyll</span>
                     <!-- <span class="copyright">Copyright © 2017 Melvin Ch'ng, All Rights Reserved.</span> -->
                 </div>
                 <div class="col-md-4">
