--- a/_includes/2016_data/footer.html
+++ b/_includes/2016_data/footer.html
@@ -18,7 +18,7 @@ footer {
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © 2017 Mucahid Dogan</span>
+                    <span class="copyright"> © 2017 KtuSec</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
