--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -32,7 +32,7 @@
                 <center> Yorum satırlarını birlikte kaldıralım. ^_^<a target="_blank" href="https://github.com/KtuSec/ktusec.github.io/blob/master/_includes/2017_data/sponsors.html"> ktusec.github.io </a> </center>
                 <br>
                 <div class="col-md-4 col-sm-6">
-                    <a href="#" class="portfolio-link" data-toggle="modal">
+                    <a target="_blank" href="http://twitter.com/cusibernet" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/cusiber.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div><br>
