--- a/_includes/2017_data/footer.html
+++ b/_includes/2017_data/footer.html
@@ -30,8 +30,7 @@ footer {
                     </ul>
                 </div>
             </div>
-            <p> Kulübümüz Karadeniz Teknik Üniversitesi Kulüpler Birliği Bildirisine göre yeni seçimler yapılana kadar <b>topluluk</b> olarak faaliyet göstermektedir.  </p>
-
+            <!--artık resmi bir kulübüz ^_^ -->
         </div>
     </footer>
 <!--
