agenda info changed

--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -33,7 +33,7 @@
                                     <h4>ETKİNLİK TAKVİMİ    </h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Etkinliklerimiz Hakkında Bilgis</p>
+                                    <p class="text-muted">Etkinlikler Tablosu</p>
                                 </div>
                                 <a href="/agenda" class="page-scroll btn btn-sm">Daha Fazla</a>
                             </div>
