New application form added

--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -17,7 +17,7 @@
                      <div class="intro-lead-in"> Karadeniz Technical University Security Club</div>
 
                      <br><br>
-                <a target="_blank" href="https://docs.google.com/forms/d/1AZEgOlYBDHsBISMKGWlLdWI5FoLU9qHpLIBj6r2Wv9w/viewform?edit_requested=true" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a>
+                <a target="_blank" href="https://goo.gl/forms/04oSHaeM1i0EX2ws2" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a>
             </div>
         </div>
     </header>
