ktusec-wiki added

--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -38,6 +38,20 @@
                                 <a href="/agenda" class="page-scroll btn btn-sm">Daha Fazla</a>
                             </div>
                         </li>
+                        <li>
+                            <div class="timeline-image">
+                               <img class="img-circle img-responsive" src="../css/2016_style/img/booklet-icon.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                               <div class="timeline-heading">
+                                    <h4>DÖKÜMANTASYON</h4>
+                               </div>
+                               <div class="timeline-heading">
+                                    <p class="text-muted">Hazırladığımız makale ve dökümanlar Ktusec-wiki</p>
+                               </div>
+                               <a href="/wiki" class="page-scroll btn btn-sm">Daha Fazla</a>
+                            </div>
+                        </li>
                         <!--<li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="../css/2016_style/img/icon-team.jpeg" alt="">
@@ -66,7 +80,7 @@
                                 <a href="/venue" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
                        </li>-->
-                        <li>
+                        <li  class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="../css/2016_style/img/icon-faq.jpeg" alt="">
                             </div>
@@ -80,23 +94,8 @@
                                 <a href="/faqs" class="page-scroll btn btn-sm">Daha Fazla</a>
                             </div>
                         </li>
-                        <!--
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/booklet-icon.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>TÜZÜK</h4>
-                                </div>
-                                <div class="timeline-heading">
-                                    <p class="text-muted">View or Download our event booklet</p>
-                                </div>
-                                <a href="/booklet" class="page-scroll btn btn-sm">Daha Fazla</a>
-                            </div>
 
-                        </li>
-                        -->
+
                     </ul>
                 </div>
             </div>
