--- a/_includes/2017_data/footer.html
+++ b/_includes/2017_data/footer.html
@@ -18,13 +18,13 @@ footer {
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright"> © 2017 KtuSec | Powered by Jekyll</span>
+                    <span class="copyright"> © 2017 KtuSec </span>
                     <!-- <span class="copyright">Copyright © 2017 Melvin Ch'ng, All Rights Reserved.</span> -->
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
-                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
+                        <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }}"></i></a>
                         </li>
                         {% endfor %}
                     </ul>
