--- a/_includes/2017_data/speakers_info.html
+++ b/_includes/2017_data/speakers_info.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
-                           <!-- <img src="../css/2017_style/img/speaker/{{ post.img }}" class="img-responsive img-centered"  alt="{{ post.alt }}">-->
+                            <img src="../css/2017_style/img/speaker/{{ post.img }}" class="img-responsive img-centered"  alt="{{ post.alt }}" width="200" height="200" >
                             <a target="_blank" href="{{ post.website }}" {font-size: 100px} > {{ post.web_name }} </a><br>
                             <a target="_blank" href="{{ post.twitter }}"> @twitter </a><br>
                             <a target="_blank" href="{{ post.github }}"> @github </a><br>
