added some css to sociall buttons

--- a/_includes/2017_data/speakers.html
+++ b/_includes/2017_data/speakers.html
@@ -64,3 +64,14 @@
             <center><a href="/2016" class="page-scroll btn btn-xl">Visit Now</a></center>-->
         </div>
     </section>
+    <style>
+    .soc .fa {
+         font-size: 24px;
+    }
+    .soc .fa-twitter {
+         margin-right: 10px;
+    }
+    .soc .fa-linkedin {
+         margin-left: 10px;
+    }
+    </style>
