--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -18,7 +18,12 @@
                         <img src="../css/2017_style/img/logos/octo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 col-sm-6 myclst">
+                    <a target="_blank" href="http://sibertakvim.com" class="portfolio-link" data-toggle="modal">
+                        <img src="../css/2017_style/img/logos/sibertakvim.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div><br><br>
+                <div class="col-md-4 col-sm-6 myclcs">
                     <a target="_blank" href="http://cyberstruggle.org" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/cystrgl.png" class="img-responsive img-centered" alt="">
                     </a>
@@ -27,3 +32,15 @@
             </div>
         </div>
     </aside>
+
+    <style>
+        .myclst {
+            width: 260px;
+            height:260px;
+            margin-bottom: 80px;
+            margin-left: 36px;  
+        }
+        .myclcs {
+            margin-left: 390px;
+        }
+    </style>
