--- a/_includes/2017_data/sponsors.html
+++ b/_includes/2017_data/sponsors.html
@@ -23,11 +23,13 @@
                         <img src="../css/2017_style/img/logos/sibertakvim.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div><br><br>
-                <div class="col-md-4 col-sm-6 myclcs">
+                <center>
+                <div align="center" class="col-md-4 col-sm-6 myclcs">
                     <a target="_blank" href="http://cyberstruggle.org" class="portfolio-link" data-toggle="modal">
                         <img src="../css/2017_style/img/logos/cystrgl.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+            </center>
                 <br><br>
             </div>
         </div>
@@ -40,7 +42,9 @@
             margin-bottom: 80px;
             margin-left: 36px;  
         }
-        .myclcs {
-            margin-left: 390px;
+        .myclcs img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
