apply form deleted

--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -16,8 +16,8 @@
 
                      <div class="intro-lead-in"> Karadeniz Technical University Security Club</div>
 
-                     <br><br>
-                <a target="_blank" href="https://goo.gl/forms/04oSHaeM1i0EX2ws2" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a>
+<!--                    <br><br>
+                <a target="_blank" href="https://goo.gl/forms/04oSHaeM1i0EX2ws2" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a> -->
             </div>
         </div>
     </header>
