--- a/_includes/2017_data/speakers.html
+++ b/_includes/2017_data/speakers.html
@@ -35,6 +35,7 @@
             <center><a href="/2016" class="page-scroll btn btn-xl">Visit Now</a></center>-->
         </div>
         <br>
+        <!--
         <div class="container">
             <div class="row">
                <div class="col-lg-12 text-center">
@@ -60,7 +61,7 @@
                </div>
             {% endfor %}
             </div>
-            <!--<p>Visit 2016's page.</p>
+            <p>Visit 2016's page.</p>
             <center><a href="/2016" class="page-scroll btn btn-xl">Visit Now</a></center>-->
         </div>
     </section>
