--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -16,7 +16,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>BİZ KİMİZ ???</h4>
+                                    <h4>BİZ KİMİZ</h4>
                                 </div>
                                 <div class="timeline-heading">
                                     <p class="text-muted">Hakkımızda</p>
@@ -52,7 +52,7 @@
                                <a href="/wiki" class="page-scroll btn btn-sm">Daha Fazla</a>
                             </div>
                         </li>
-                        <li  class="timeline-inverted">
+                        <!--<li  class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="../css/2016_style/img/icon-faq.jpeg" alt="">
                             </div>
@@ -65,7 +65,7 @@
                                 </div>
                                 <a href="/faqs" class="page-scroll btn btn-sm">Daha Fazla</a>
                             </div>
-                        </li>
+                        </li>-->
 
 
                     </ul>
