--- a/_includes/2017_data/contact.html
+++ b/_includes/2017_data/contact.html
@@ -2,9 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">İLETİŞİM</h2>
-                    <h3 class="section-subheading text-muted"> İletişim için Mail adresimizden veya
-                       <a target="_blank" href="http://www.facebook.com/ktu.sec">Facebook üzerinden </a> ulaşabilirsiniz.</h3>
+                    <h2 class="section-heading">İLETİŞİM</h2><br>
                 </div>
             </div>
             <div class="row">
@@ -15,7 +13,7 @@
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
-                                <a href="mailto:ktusec.club@gmail.com" class="page-scroll btn btn-xl">ktusec.club@gmail.com</a>
+                                <a href="mailto:info@ktusec.org" class="page-scroll btn btn-xl" >info@ktusec.org</a>
                             </div>
                         </div>
 
