--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -20,8 +20,15 @@
                 <a target="_blank" href="https://goo.gl/forms/04oSHaeM1i0EX2ws2" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a> -->
             </div>
         </div>
-    </header>
-
+    </header><!--
+        <div class="myconteiner">
+            <div class="intro-text">
+                        <center>
+                            <div class="intro-lead-in">Pwnlydays 3-4 Kasım tarihlerinde Karadeniz Teknik Üniversitesi'nde</div><br>
+                            <a href="https://pwnlydays.canyoupwn.me" target="_blank" class="page-scroll btn btn-sm">KAYIT</a>
+                        </center>
+            </div>
+        </div>-->
     {% include 2017_data/about.html %}
     {% include 2017_data/speakers.html %}
     {% include 2017_data/intro.html %}
@@ -33,3 +40,10 @@
 
     </body>
 </html>
+<!--
+<style>
+    .myconteiner {
+        margin-top:20px;
+    }
+</style>
+-->
