--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -20,15 +20,18 @@
                 <a target="_blank" href="https://goo.gl/forms/04oSHaeM1i0EX2ws2" class="page-scroll btn btn-sm">EKİBİMİZDE YER ALMAK İSTER MİSİN?</a> -->
             </div>
         </div>
-    </header><!--
+    </header>
         <div class="myconteiner">
             <div class="intro-text">
                         <center>
-                            <div class="intro-lead-in">Pwnlydays 3-4 Kasım tarihlerinde Karadeniz Teknik Üniversitesi'nde</div><br>
-                            <a href="https://pwnlydays.canyoupwn.me" target="_blank" class="page-scroll btn btn-sm">KAYIT</a>
+                            <div class="intro-lead-in">
+                                <p class="mypf">Pwnlydays 3-4 Kasım tarihlerinde KTUSEC ev sahipliğinde <br>Karadeniz Teknik Üniversitesi'nde</p>
+                            </div>
+                            <a href="https://pwnlydays.canyoupwn.me" target="_blank" class="page-scroll btn btn-sm">Detaylı Bilgi</a>
+                            <hr><hr>
                         </center>
             </div>
-        </div>-->
+        </div>
     {% include 2017_data/about.html %}
     {% include 2017_data/speakers.html %}
     {% include 2017_data/intro.html %}
@@ -40,10 +43,27 @@
 
     </body>
 </html>
-<!--
+
 <style>
     .myconteiner {
-        margin-top:20px;
+        margin-top:10px;
     }
+    .mypf {
+        font-size: 50px;
+        font-weight: 100;
+        animation: heeey 1s ease-in-out infinite;
+        text-align: center;
+    }
+
+    @keyframes heeey {
+  0% {
+    font-weight: 100;
+  }
+  50% {
+    font-weight: 900;
+  }
+  100% {
+    font-weight: 100;
+  }
+}
 </style>
--->
