--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -25,7 +25,7 @@
             <div class="intro-text">
                         <center>
                             <div class="intro-lead-in">
-                                <p class="mypf">Pwnlydays 3-4 Kasım tarihlerinde KTUSEC ev sahipliğinde <br>Karadeniz Teknik Üniversitesi'nde</p>
+                                <p class="mypf">Pwnlydays, 3-4 Kasım tarihlerinde KtuSec ev sahipliğinde <br>Karadeniz Teknik Üniversitesi'nde</p>
                             </div>
                             <a href="https://pwnlydays.canyoupwn.me" target="_blank" class="page-scroll btn btn-sm">Detaylı Bilgi</a>
                             <hr><hr>
@@ -49,9 +49,9 @@
         margin-top:10px;
     }
     .mypf {
-        font-size: 50px;
+        font-size: 33px;
         font-weight: 100;
-        animation: heeey 1s ease-in-out infinite;
+        animation: heeey 1.5s ease-in-out infinite;
         text-align: center;
     }
 
@@ -66,4 +66,5 @@
     font-weight: 100;
   }
 }
+
 </style>
