--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </header>
-        <div class="myconteiner">
+        <!--<div class="myconteiner">containeraa
             <div class="intro-text">
                         <center>
                             <div class="intro-lead-in">
@@ -31,7 +31,7 @@
                             <hr><hr>
                         </center>
             </div>
-        </div>
+        </div>-->
     {% include 2017_data/about.html %}
     {% include 2017_data/speakers.html %}
     {% include 2017_data/intro.html %}
